--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-animated-css": "^1.2.1",
+    "react-bootstrap": "^2.9.2",
     "react-countup": "^6.4.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
